--- a/spring/src/main/resources/application.yml
+++ b/spring/src/main/resources/application.yml
@@ -1,3 +1,10 @@
+spring:
+  datasource:
+    url: jdbc:h2:mem://localhost:3306/
+    username: root
+    password:
+
+
 logging:
   level:
     root: debug
