--- a/spring/src/main/resources/application.yml
+++ b/spring/src/main/resources/application.yml
@@ -1,8 +1,21 @@
 spring:
+
   datasource:
     url: jdbc:h2:mem://localhost:3306/
     username: root
     password:
+
+  kafka:
+    consumer:
+      bootstrap-servers: localhost:9092
+      group-id: foo
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    producer:
+      bootstrap-servers: localhost:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
 
 logging:
