--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -77,6 +77,13 @@
 			<artifactId>spring-session-data-redis</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 
