add mvn/ dirtory

--- a/spring/src/main/resources/application.yml
+++ b/spring/src/main/resources/application.yml
@@ -21,6 +21,15 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    properties:
+      hibernate:
+        #        show_sql: true
+        format_sql: true
+    database-platform: org.hibernate.dialect.H2Dialect
+
 logging:
   level:
     root: debug
