--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -98,6 +98,12 @@
 			<artifactId>spring-security-test</artifactId>
 		</dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>junit</groupId>-->
+<!--            <artifactId>junit</artifactId>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>-->
+
 
 
 	</dependencies>
