--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -98,6 +98,13 @@
 			<artifactId>spring-security-test</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-aws-context</artifactId>
+			<version>2.2.2.RELEASE</version>
+		</dependency>
+
+
 <!--        <dependency>-->
 <!--            <groupId>junit</groupId>-->
 <!--            <artifactId>junit</artifactId>-->
