--- a/spring/src/main/resources/application.yml
+++ b/spring/src/main/resources/application.yml
@@ -1,98 +1,4 @@
 spring:
+  profiles:
+    active: local
 
-  datasource:
-    url: jdbc:h2:mem:test
-    username: sa
-    password:
-
-  h2:
-    console:
-      enabled: true
-
-  redis:
-    host: localhost
-    port: 6379
-
-  kafka:
-    consumer:
-      bootstrap-servers: localhost:9092
-      group-id: foo
-      auto-offset-reset: earliest
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-    producer:
-      bootstrap-servers: localhost:9092
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
-    database-platform: org.hibernate.dialect.H2Dialect
-
-  session:
-    store-type: jdbc
-
-  security:
-    oauth2:
-      client:
-        registration:
-          google:
-            client-id: 773822756573-sq2fpu1iv3pc6j8q6fuchgt50f8jrtl0.apps.googleusercontent.com
-            client-secret: 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
-            scope:
-              - profile
-              - email
-
-          naver:
-            client-id: BJXK37WtqADgwz_QtJ23
-            client-secret: G1vGgttnqK
-            redirect-uri: http://localhost:8080/login/oauth2/code/naver
-#            redirect-uri: '{baseUrl}/{action}/oauth2/code/{registrationId}'
-            authorization-grant-type: authorization_code
-            scope:
-              - name
-              - email
-              - profile_image
-            client-name: Naver
-
-          kakao:
-            client-id: f97b0cfc54efa939993f6c013f5e1b85
-            client-secret: GzDiX404LEwrkWuXBHzhzT7pCM30A3KY
-            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
-            #            redirect-uri: '{baseUrl}/{action}/oauth2/code/{registrationId}'
-            authorization-grant-type: authorization_code
-            client-authentication-method: POST
-            scope:
-              - profile_nickname
-              - account_email
-              - profile_image
-            client-name: Kakao
-
-        provider:
-          naver:
-            authorization-uri: https://nid.naver.com/oauth2.0/authorize
-            token-uri: https://nid.naver.com/oauth2.0/token
-            user-info-uri: https://openapi.naver.com/v1/nid/me
-            user-name-attribute: response
-
-          kakao:
-            authorization-uri: https://kauth.kakao.com/oauth/authorize
-            token-uri: https://kauth.kakao.com/oauth/token
-            user-info-uri: https://kapi.kakao.com/v2/user/me
-            user-name-attribute: id
-
-logging:
-  level:
-    root: debug
-
-#server:
-#  servlet:
-#    session:
-#      cookie:
-#        name: helloworld
-#
