--- a/jpa-postgre-spring-kotlin/src/main/resources/application.yml
+++ b/jpa-postgre-spring-kotlin/src/main/resources/application.yml
@@ -5,6 +5,12 @@ spring:
         ddl-auto: create-drop
         dialect: org.hibernate.dialect.PostgreSQLDialect
     generate-ddl: true
+    show-sql: true
   datasource:
     url: jdbc:postgresql://localhost:5432/play-ground
 
+
+#logging:
+#  level:
+#    root: info
+#    org.hibernate: trace
