--- a/spring/jpa/src/main/resources/application.yml
+++ b/spring/jpa/src/main/resources/application.yml
@@ -1,11 +1,14 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/play-ground
-    username:
+    url: jdbc:h2:mem:test
+    username: sa
     password:
+    driver-class-name: org.h2.Driver
 
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
       ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
 
