reinforce profile test and clean up code

--- a/spring/jpa/src/main/resources/application.yml
+++ b/spring/jpa/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  config:
+    activate:
+      on-profile: dev
+
   datasource:
     url: jdbc:postgresql://localhost:5432/play-ground
     username:
@@ -10,9 +14,28 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
-h2-datasource:
-  url: jdbc:h2:mem:test
-  username: sa
-  password:
-  driver-class-name: org.h2.Driver
+---
+
+spring:
+  config:
+    activate:
+      on-profile: test
+
+  datasource:
+    url: jdbc:h2:mem:test
+    username: sa
+    password:
+
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.H2Dialect
+
+  h2:
+    console:
+      enabled: true
