add test creating instance with same pk

--- a/spring/jpa/src/main/resources/application.yml
+++ b/spring/jpa/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
       on-profile: postgresql
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/play-ground
+    url: jdbc:postgresql://localhost:5432/play_ground
     username:
     password:
 
