--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,7 @@ application-local.yml
 node_modules/
 
 .DS_Store
-firebase-service-account.json
 
+# firebase #
+firebase-service-account.json
+play-ground-b4aea-firebase-adminsdk-i5gjj-b0e170f95d.json
