--- a/reactnative/package.json
+++ b/reactnative/package.json
@@ -13,10 +13,14 @@
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-date-picker": "^4.2.14",
+    "react-native-dotenv": "^3.4.9",
     "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-image-picker": "^7.0.3",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
