--- a/reactnative/package.json
+++ b/reactnative/package.json
@@ -17,8 +17,8 @@
     "date-fns": "^2.30.0",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-config": "^1.5.1",
     "react-native-date-picker": "^4.2.14",
-    "react-native-dotenv": "^3.4.9",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-picker": "^7.0.3",
     "react-native-modal-datetime-picker": "^17.1.0",
