--- a/reactnative/package.json
+++ b/reactnative/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^12.6.1",
+    "@react-native-firebase/firestore": "^12.6.1",
     "@react-native-community/datetimepicker": "^7.6.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
