add c/about-header/duplicate-header-example/ and clean up code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "*.js": "javascriptreact",
-        "basicarith.h": "c"
+        "basicarith.h": "c",
+        "integerdiv.h": "c"
     }
 }
