should be reset

--- a/.gitignore
+++ b/.gitignore
@@ -32,15 +32,18 @@ node_modules/
 
 .DS_Store
 
+# common #
+play-ground.*
+
 # firebase #
 firebase-service-account.json
 play-ground-b4aea-firebase-adminsdk-i5gjj-b0e170f95d.json
 
 # javascript #
-javascript/play-ground.js
 
 # react native
 reactnative/.env
 reactnative/android/app/google-services.json
 
 # c
+
