--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "*.js": "javascriptreact",
         "basicarith.h": "c",
-        "integerdiv.h": "c"
+        "integerdiv.h": "c",
+        "iosfwd": "cpp",
+        "ostream": "cpp",
+        "__locale": "cpp"
     }
 }
