--- a/.gitignore
+++ b/.gitignore
@@ -25,19 +25,23 @@ hs_err_pid*
 *.iml
 .idea/
 
-JavaTest.java
-out/
-application-local.yml
-node_modules/
 
 .DS_Store
+
+# common #
+play-ground.*
+out/
+
+# java #
+JavaTest.java
+application-local.yml
 
 # firebase #
 firebase-service-account.json
 play-ground-b4aea-firebase-adminsdk-i5gjj-b0e170f95d.json
 
 # javascript #
-javascript/play-ground.js
+node_modules/
 
 # react native
 reactnative/.env
