--- a/javascript/package.json
+++ b/javascript/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "type": "module",
   "dependencies": {
+    "express": "^4.19.2",
     "uuid": "^9.0.1"
   }
 }
